--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	   <script type="text/javascript" src="js/jquery.min.js"></script>
        <script type="text/javascript" src="js/echarts.js"></script>
        <script type="text/javascript" src=" https://api.map.baidu.com/getscript?v=2.0&ak=f8GgvXGNa3rCqHkmrAdAgPm3YFV12uTi"></script>
-       <script type="text/javascript" src="https://gallery.echartsjs.com/dep/echarts/latest/extension/bmap.min.js"></script>
+       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5/dist/extension/bmap.js"></script>
        <script type="text/javascript" src='js/main.js'></script>
 	   <div id="inout" style="position:absolute;left: 5px; top: 55px;z-index:2;"> 
 	   		<span class="Line2" style="font-family:微软雅黑;color:rgb(18,89,147);font-weight:bold;">显示模式
