--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html style="height: 100%">
    <head>
        <meta charset="utf-8">
+                <script type="text/javascript">
+    window.HOST_TYPE = 1
+    </script>
    </head>
    <body style="height: 100%; margin: 0">
        <div id="container" style="width:100%;height:100%"></div>
